test/e2e/emitters/kgateway/testdata/input/backend_protocol.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: backend-protocol-test
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: grpc.localdev.me
    http:
      paths:
      - backend:
          service:
            name: echo-backend
            port:
              number: 8080
        path: /
        pathType: Prefix
