test/e2e/emitters/kgateway/testdata/input/backend_tls.yaml
apiVersion: v1
kind: Secret
metadata:
  name: backend-tls-cert
  namespace: default
type: kubernetes.io/tls
stringData:
  tls.crt: |
    -----BEGIN CERTIFICATE-----
    MIIBkTCB+wIJAKHHCgVZfULhMA0GCSqGSIb3DQEBCwUAMBExDzANBgNVBAMMBnRl
[...]
    ==
    -----END CERTIFICATE-----
  tls.key: |
    -----BEGIN PRIVATE KEY-----
    MIICdgIBADANBgkqhkiG9w0BAQEFAASCAmAwggJcAgEAAoGBAMOx7O4X+WdSUNL9
[...]
    -----END PRIVATE KEY-----
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-secret: default/backend-tls-cert
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: "on"
    nginx.ingress.kubernetes.io/proxy-ssl-name: "backend-tls.example.com"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"
  name: backend-tls-test
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: tls.localdev.me
    http:
      paths:
      - backend:
          service:
            name: echo-backend
            port:
              number: 8080
        path: /
        pathType: Prefix
