test/e2e/emitters/kgateway/testdata/input/basic_auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress2gateway.kubernetes.io/implementation: kgateway
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "basic-auth"
    nginx.ingress.kubernetes.io/auth-secret-type: "auth-file"
  name: basic-auth-localhost
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: basic-auth.localdev.me
    http:
      paths:
      - backend:
          service:
            name: echo-backend
            port:
              number: 8080
        path: /
        pathType: Prefix
