test/e2e/emitters/kgateway/testdata/input/load_balance.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress2gateway.kubernetes.io/implementation: kgateway
    nginx.ingress.kubernetes.io/load-balance: "round_robin"
  name: lb-localhost
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: lb.localdev.me
    http:
      paths:
      - backend:
          service:
            name: echo-backend
            port:
              number: 8080
        path: /
        pathType: Prefix
