test/e2e/emitters/kgateway/testdata/input/service_upstream.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: service-upstream-test
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: service-upstream.localdev.me
    http:
      paths:
      - backend:
          service:
            name: echo-backend
            port:
              number: 8080
        path: /
        pathType: Prefix
