test/e2e/emitters/kgateway/testdata/input/ssl_passthrough.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: ssl-passthrough-localhost
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: ssl-passthrough.localdev.me
    http:
      paths:
      - backend:
          service:
            name: tls-svc
            port:
              number: 443
        path: /
        pathType: Prefix
